src/test/deca/etapeA/valid/lexer/lex_separators.deca

// Description:
//    test du lexeur pour les séparateurs
//
// Resultats:
// ok

    \r \n

