src/test/deca/etapeA/invalid/lex_ident_i.deca
// Description:
//    test du lexeur pour les identificateurs
//
// Resultats:
// erreur syntaxique
// Ligne <No_de_ligne> : <message d'erreur>


